<resources>
    <string name="app_name">AndroidRoomKotlin</string>
    <string name="hint_word">Word...</string>
    <string name="button_back">Back</string>
    
    <string name="button_save">Save</string>
    <string name="button_next">Next</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">New Note</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NOTES</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="notes">NOTES</string>
    <string name="draw">DRAW</string>
    <string name="take_picture">TAKE PICTURE</string>

    <string name="menu_home">HOME</string>
    <string name="menu_gallery">NOTES</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>