<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorlightBackground"
    android:orientation="vertical"
    tools:context=".ui.NewWordActivity">

    <View
        android:id="@+id/view_avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_oval_background"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:gravity="center"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_oval_background"
        android:gravity="top"
        android:minHeight="@dimen/min_height"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="36dp">

            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/actionBarDivider"
                android:fontFamily="sans-serif-light"
                android:inputType="text|textMultiLine"
                android:minHeight="@dimen/min_height"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/book"
                app:layout_constraintTop_toBottomOf="@+id/edit_content" />

            <EditText
                android:id="@+id/edit_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/actionBarDivider"
                android:fontFamily="sans-serif-light"
                android:inputType="text|textMultiLine"
                android:minHeight="@dimen/min_height"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toTopOf="@+id/scrollView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/button_photo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_scan2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/actionModeFindDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/button_image" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_scan3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/actionModeFindDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/button_image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:background="@drawable/shape_oval_and_stroke_transparent"
        android:text="@string/button_back"
        android:textColor="#DA4646"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_oval_and_stroke_transparent"
        android:text="@string/button_save"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_oval_and_stroke_transparent"
        android:text="@string/button_next"
        android:layout_marginRight="8dp"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />



</androidx.constraintlayout.widget.ConstraintLayout>